# mailapp

./: .gitignore  Cargo-no-webkit.toml  Cargo.toml  LICENSE  Makefile  README.md  com.asgard.Mail.json  env.example  install-deps-simple.sh  install-deps.sh  run-email-client.sh  setup.sh  test_dbus_demo.sh  test_simple_gtk_dbus.sh  test_single_instance.sh
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: app.rs  constants.rs  dbus_service.rs  email_backend.rs  main.rs  notifications.rs  thread_helpers.rs  tray.rs
app/src/theming/: asgard.css  mod.rs
app/src/widgets/: mailbox_tree.rs  message_card.rs  message_header.rs  message_list.rs  message_view.rs  mod.rs  search_bar.rs  status_bar.rs
app/src/windows/: account_wizard.rs  compose_window.rs  main_window.rs  mod.rs  preferences_window.rs
assets/: asgard-mail.desktop
core/: Cargo.toml
core/src/: account.rs  config.rs  crypto.rs  error.rs  gmail.rs  lib.rs  mailbox.rs  message.rs  threading.rs  threads.rs  types.rs
core/src/gmail/: labels.rs  xoauth2.rs
core/src/search/: mod.rs  simple_index.rs  tantivy_index.rs
core/src/storage/: cache.rs  database.rs  migrations.rs  mod.rs
core/src/sync/: imap_sync.rs  mod.rs  pop3_sync.rs  smtp_send.rs  sync_manager.rs
crates/pop3/: Cargo.toml
crates/pop3/src/: lib.rs
email-backend/: Cargo.toml
email-backend/src/: lib.rs
logs/: job-logs.txt  job-logs1.txt  job-logs2.txt  job-logs3.txt
minimal-app/: Cargo.toml
minimal-app/src/: main.rs
minimal-core/: Cargo.toml
minimal-core/src/: lib.rs
oauth/: Cargo.toml
oauth/src/: gmail_oauth.rs  lib.rs  token_manager.rs
simple-gtk-app/: Cargo.toml  build.rs
simple-gtk-app/examples/: pid_query.rs
simple-gtk-app/src/: constants.rs  dbus_service.rs  goa_ffi.rs  lib.rs  main.rs  style.css  thread_helpers.rs  threading_test.rs
simple-gtk-app/src/theming/: asgard.css  mod.rs
simple-gtk-app/src/widgets/: message_card.rs  message_header.rs  message_list.rs  message_view.rs  mod.rs  sidebar.rs
theming/: Cargo.toml
theming/src/: lib.rs
theming/styles/: asgard-mail.css
ui-components/: Cargo.toml
ui-components/src/: lib.rs
