[workspace]
members = [
    "app",
    # "core",  # Temporarily disabled due to compilation errors
    "oauth",
    "ui-components",
    "theming",
    # "crates/pop3",  # Temporarily disabled due to dependency issues
    "minimal-core",
    "minimal-app",
    "simple-gtk-app",
    "email-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Asgard Mail Team"]
license = "MIT"
repository = "https://github.com/ilyk/mailapp"
description = "Asgard Mail - A modern email client for GNOME with Gmail OAuth support"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"
oauth2 = "4.4"

# Email protocols
async-imap = "0.9"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false }
mailparse = "0.14"
# addr = "0.4"  # Replaced with email_address for better security
email_address = "0.2"
mime = "0.3"

# TLS
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
native-tls = "0.2"

# Storage and search
rusqlite = { version = "0.29", features = ["bundled"] }
# tantivy = "0.21"  # Temporarily disabled due to zstd-safe conflicts
sha2 = "0.10"
directories = "5.0"

# Security
keyring = "2.3"
# sodiumoxide = "0.2"  # Replaced with libsodium-sys for better maintenance
libsodium-sys = "0.2"

# UI Framework
gtk4 = { version = "0.10", features = ["v4_8"] }
libadwaita = { version = "0.8", features = ["v1_2"] }
webkit2gtk = "0.15"

# System integration
notify-rust = "4.10"
open = "5.0"

# Utilities
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
base64 = "0.21"
hex = "0.4"

# Development
tempfile = "3.8"
mockall = "0.12"

# Development profiles
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
