[package]
name = "asgard-mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Asgard Mail - A modern email client for GNOME"

[[bin]]
name = "asgard-mail"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

# UI Framework
gtk4.workspace = true
libadwaita.workspace = true


# System integration
notify-rust.workspace = true
open.workspace = true

# Core dependencies
asgard-core = { path = "../core" }
# asgard-oauth = { path = "../oauth" }  # Temporarily disabled due to compilation errors

# Additional dependencies
clap = { version = "4.4", features = ["derive"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
tracing-subscriber = "0.3"

# DBus integration
zbus = "3.14"
zvariant = "3.15"
