[package]
name = "email-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "serde"] }
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport"], default-features = false }
async-imap = "0.9"
native-tls = "0.2"
tokio-native-tls = "0.3"
mailparse = "0.14"
url = "2.4"
