[package]
name = "asgard-mail-minimal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asgard-mail-minimal"
path = "src/main.rs"

[dependencies]
# Basic dependencies only
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
clap = { version = "4.4", features = ["derive"] }

# Core dependency
asgard-core-minimal = { path = "../minimal-core" }
