[package]
name = "asgard-core-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Basic dependencies only
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "serde"] }
