[package]
name = "asgard-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth2 implementation for Asgard Mail"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true
oauth2.workspace = true
base64.workspace = true
time.workspace = true
uuid.workspace = true

# Additional dependencies
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-sync = "0.1"

# Core dependency
asgard-core = { path = "../core" }
