[package]
name = "simple-gtk-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-gtk-app"
path = "src/main.rs"

[[example]]
name = "pid_query"
path = "examples/pid_query.rs"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_8"] }
libadwaita = { version = "0.8", features = ["v1_2"] }
email-backend = { path = "../email-backend" }
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
regex = "1.10"
glib = { version = "0.21", features = ["v2_74"] }
gio = { version = "0.21", features = ["v2_74"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
zbus = { version = "3.14", features = ["blocking"] }
zvariant = "3.15"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"

[build-dependencies]
glib-build-tools = "0.17"

[features]
goa = []
